// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ClickLink /> matches snapshot 1`] = `
<DocumentFragment>
  <span
    class="css-fzjird-ClickLink"
  >
    Hello World
  </span>
</DocumentFragment>
`;

exports[`<TextLink /> matches snapshot 1`] = `
<DocumentFragment>
  <a
    class="css-tgm9kd-TextLink"
    href="abc"
    target="_blank"
  >
    Hello World
  </a>
</DocumentFragment>
`;
